ISSUE #59 - Remove test URL from example.html

--- a/example/example.html
+++ b/example/example.html
@@ -23,7 +23,7 @@
     <script src="http://www.x3dom.org/x3dom/release/x3dom-full.js"></script>
 	<script src="https://example.org/public/plugins/project/viewer.js"></script>
 	<script>
-		var x3d_url = "https://example.org/api/buildingsmart/Office_MEP_20110811/revision/master/head.x3d.src";
+		var x3d_url = "";
 
 		$(document).ready( function () {
 			window.viewer = new Viewer();
