MASTER - Fix CSS for the axes

--- a/example/example.html
+++ b/example/example.html
@@ -12,6 +12,14 @@
 			top: 0px;
 		}
 
+		#Axes {
+			width: 100px;
+			height: 100px;
+			bottom: 0px;
+			position: absolute;
+			border: none;
+		}
+
 		#body_style 
 		{
 			margin: 0px;
