ISSUE #66 - Splitting algorithm for multi part

--- a/example/example.html
+++ b/example/example.html
@@ -16,6 +16,14 @@
 		{
 			margin: 0px;
 		}
+
+		#Axes {
+			width: 100px;
+			height: 100px;
+			bottom: 0px;
+			position: absolute;
+			border: none;
+		}
 	</style>
 	<title> 3D Repo Test </title>
 	<script src="http://code.jquery.com/jquery-git2.min.js"></script>
