ISSUE - More fixes for VR Demo towards Angular goodness

--- a/public/vrdemo.html
+++ b/public/vrdemo.html
@@ -57,6 +57,7 @@
 		<script type="text/javascript" src="/public/plugins/project/threed/viewermanager.js"></script>
 		<script type="text/javascript" src="/public/plugins/project/threed/pinShader.js"></script>
 		<script type="text/javascript" src="/public/plugins/project/threed/logo.js"></script>
+		<script type="text/javascript" src="/public/plugins/project/threed/viewerutil.js"></script>
 		<script type="text/javascript" src="/public/plugins/project/threed/viewer.js"></script>
 		<script type="text/javascript" src="/public/plugins/project/threed/gamepad.js"></script>
 		<script type="text/javascript" src="/public/plugins/project/threed/collision.js"></script>
