--- a/public/wizard.html
+++ b/public/wizard.html
@@ -60,21 +60,21 @@
                     <div class="form-group">
                       
                       <div class= "col-sm-4 margined">
-                      <label for="project-name">Owner</label>
+                      <label for="model-name">Owner</label>
                       <select class="form-control">
                         <option value="one">Company 1</option>
                         <option value="two">Company 2</option>
                       </select>
                       </div>
                       <div class= "col-sm-8  margined">
-                      <label for="project-name">Project Name</label>
-                      <input type="email" class="form-control" id="project-name">
+                      <label for="model-name">model Name</label>
+                      <input type="email" class="form-control" id="model-name">
                       </div>
                     </div>
                     
                     <div class="form-group">
                       <div class= "col-sm-4 margined">
-                      <label for="project-name">Type</label>
+                      <label for="model-name">Type</label>
                       <select class="form-control">
                         <option value="one">Architectural</option>
                         <option value="two">Aerospace</option>
@@ -87,8 +87,8 @@
 
                     <div class="form-group">
                       <div class= "col-sm-12 margined">
-                      <label for="project-name">Description</label><span> (optional)</span>
-                      <input type="email" class="form-control" id="project-name">
+                      <label for="model-name">Description</label><span> (optional)</span>
+                      <input type="email" class="form-control" id="model-name">
                       </div>
                     </div>   
 
@@ -110,7 +110,7 @@
                           Public
                         </label>
                         <div class="radio-pad">
-                        <p>Everybody can see this project.</p>
+                        <p>Everybody can see this model.</p>
                         </div>
                       </div>
 
@@ -121,7 +121,7 @@
                           Private
                         </label>
                         <div class="radio-pad">
-                        <p>Only selected users can see this project.</p>
+                        <p>Only selected users can see this model.</p>
                         </div>
                       </div>
                     </div> 
@@ -238,7 +238,7 @@
                         <label class="radio radio-pad">
                           <input type="radio" name="federated" id="federated" value="single"> 
                           <span class="glyphicon glyphicon-file"></span>
-                          Single Project
+                          Single model
                         </label>
                         <div class="radio-pad">
                         <p>Consist of only one element.</p>
@@ -249,10 +249,10 @@
                         <label class="radio radio-pad">
                           <input type="radio" name="federated" id="federated" value="federated"  checked="checked"> 
                           <span class="glyphicon glyphicon-folder-open"></span>
-                          Federated Project
+                          Federated model
                         </label>
                         <div class="radio-pad">
-                        <p>Can have attached sub-projects.</p>
+                        <p>Can have attached sub-models.</p>
                         </div>
                       </div>
                     </div>    
@@ -268,7 +268,7 @@
                     <div class="form-group">
                       <div class="col-sm-6 margined">
                         <div class="input-group"> 
-                        <input type="search" name="searchBy" id="searchBy" class="form-control" placeholder="Search project"/>
+                        <input type="search" name="searchBy" id="searchBy" class="form-control" placeholder="Search model"/>
                         <span class="input-group-btn">
                             <button id="filter" class="btn btn-primary btn-block">
                                 <span class="glyphicon glyphicon-plus"></span>
@@ -284,7 +284,7 @@
                                 <span class="glyphicon glyphicon-file"></span>
                             </button>
                         </span>
-                        <input type="search" name="searchBy" id="searchBy" class="form-control" readonly value="Car project 1"/>
+                        <input type="search" name="searchBy" id="searchBy" class="form-control" readonly value="Car model 1"/>
                         <span class="input-group-btn">
                           <button id="filter" class="btn btn-primary btn-block">
                               <span class="glyphicon glyphicon-minus"></span>
@@ -308,7 +308,7 @@
                                   <span class="glyphicon glyphicon-file"></span>
                               </button>
                           </span>
-                          <input type="search" name="searchBy" id="searchBy" class="form-control" readonly value="Floor project 3"/>
+                          <input type="search" name="searchBy" id="searchBy" class="form-control" readonly value="Floor model 3"/>
                           <span class="input-group-btn">
                           <button id="filter" class="btn btn-primary btn-block">
                               <span class="glyphicon glyphicon-minus"></span>
