publish: ISSUE #435 - issue api doc
generated from commit b168100f0f06587679c9ae12e94d976f029d008a

--- a/index.html
+++ b/index.html
@@ -2366,7 +2366,7 @@ web socket client id returned from connecting to the web socket server when maki
 </thead><tbody>
 <tr>
 <td>action</td>
-<td>action schema object, only presence in automated comment</td>
+<td><a href="#action-object">action object</a>, only presence in automated comment</td>
 <td></td>
 <td>Y</td>
 </tr>
@@ -2411,6 +2411,28 @@ web socket client id returned from connecting to the web socket server when maki
 <td><a href="#viewpoint-object">viewpoint object</a></td>
 <td></td>
 <td></td>
+</tr>
+</tbody></table>
+
+<h3 id="action-object">Action object</h3>
+
+<table><thead>
+<tr>
+<th>Attribute</th>
+<th>Description</th>
+</tr>
+</thead><tbody>
+<tr>
+<td>property</td>
+<td>issue status property name</td>
+</tr>
+<tr>
+<td>from</td>
+<td>old property value</td>
+</tr>
+<tr>
+<td>to</td>
+<td>new property value</td>
 </tr>
 </tbody></table>
 
