ISSUE #394 - Cleaner version management

--- a/pug/ie6.html
+++ b/pug/ie6.html
@@ -19,7 +19,10 @@
     <center>
       <div id="notSupported">
         Your browser is not supported.
-        Please upgrade to the latest version of <a href="https://www.google.co.uk/chrome" target="_blank">Chrome</a>, <a href="https://www.mozilla.org/firefox" target="_blank">FireFox</a> or <a target="_blank" href="https://www.microsoft.com/en-gb/windows/microsoft-edge">Edge</a><br><br>
+        Please upgrade to the latest version of 
+        <a href="https://www.google.co.uk/chrome" target="_blank", rel="noopener">Chrome</a>, 
+        <a href="https://www.mozilla.org/firefox", rel="noopener", target="_blank">FireFox</a> 
+        or <a target="_blank" rel="noopener" href="https://www.microsoft.com/en-gb/windows/microsoft-edge">Edge</a><br><br>
       </div>
     </center>
   </body>
