--- a/frontend/index.html
+++ b/frontend/index.html
@@ -90,10 +90,11 @@
     <script type="text/javascript" src="/config.js"></script>
     <script type="text/javascript" src="/dist/three_d_repo.min.js" async></script>
    
-    <!-- Else load LiveReload-->
+    <!-- Load LiveReload if on Dev-->
     <script async>
 
         if (ClientConfig && ClientConfig.development === true) {
+            console.log("Development - Loading livereload.js")
             var src="//localhost:35729/livereload.js" ;
             var script = document.createElement("script");
             script.setAttribute("src", src);
