ISSUE #394 - Back to stability!

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -94,7 +94,7 @@
     <script async>
 
         if (ClientConfig && ClientConfig.development === true) {
-            console.log("Development - Loading livereload.js")
+            console.debug("Development - Loading livereload.js")
             var src="//localhost:35729/livereload.js" ;
             var script = document.createElement("script");
             script.setAttribute("src", src);
