--- a/frontend/index.html
+++ b/frontend/index.html
@@ -61,8 +61,14 @@
     <div id="notSupported" style="visibility:hidden;" aria-label="Not Supported">
       <div><img src="images/3drepo-logo-white.png"></div>
       <div>
+
         Your browser is not supported.
-        Please upgrade to the latest version of <a href="https://www.google.co.uk/chrome" target="_blank">Chrome</a>, <a href="https://www.mozilla.org/firefox" target="_blank">FireFox</a> or <a target="_blank" href="https://www.microsoft.com/en-gb/windows/microsoft-edge">Edge</a><br><br><br>
+        Please upgrade to the latest version of 
+        <a href="https://www.google.co.uk/chrome" rel="noopener" target="_blank">Chrome</a>, 
+        <a href="https://www.mozilla.org/firefox" rel="noopener" target="_blank">FireFox</a> or 
+        <a href="https://www.microsoft.com/en-gb/windows/microsoft-edge" rel="noopener"target="_blank">Edge</a>
+        <br><br><br>
+
         <input id="notSupportedButton" type="button" value="OK" style="padding:10px 60px; font-size:14px;" onclick="document.getElementById(&quot;notSupported&quot;).style.visibility=&quot;hidden&quot;">
       </div>
     </div>
