--- a/frontend/index.html
+++ b/frontend/index.html
@@ -94,7 +94,7 @@
     <!-- CSS AND JAVASCRIPT -->
 
     <!-- Load config from server and dependencies + 3D Repo JavaScript-->
-    <script type="text/javascript" src="/config.js" defer></script>
+    <script type="text/javascript" src="/config.js"></script>
     <script type="text/javascript" src="/dist/three_d_repo.min.js" async></script>
    
     <script type="text/javascript", src="https://www.google.com/recaptcha/api.js?render=explicit&onload=vcRecaptchaApiLoaded" async></script>
@@ -102,6 +102,7 @@
     <!-- Load LiveReload if on Dev-->
     <script async>
       if (window) {
+        console.debug("Development Environment?", window.ClientConfig.development);
         if (window.ClientConfig && window.ClientConfig.development === true) {
             console.debug("Development - Loading livereload.js");
             var src = "//localhost:35729/livereload.js";
