ISSUE #521 - Move the config off the API service as url can't be known in advanced

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -94,7 +94,7 @@
     <!-- CSS AND JAVASCRIPT -->
 
     <!-- Load config from server and dependencies + 3D Repo JavaScript-->
-    <script type="text/javascript" src="/api/config/config.js"></script>
+    <script type="text/javascript" src="/config/config.js"></script>
     <script type="text/javascript" src="/dist/three_d_repo.min.js" async></script>
    
     <script type="text/javascript", src="https://www.google.com/recaptcha/api.js?render=explicit&onload=vcRecaptchaApiLoaded" async></script>
