--- a/frontend/index.html
+++ b/frontend/index.html
@@ -66,14 +66,14 @@
     </noscript>
 
     <div id="notSupported" style="visibility:hidden;" aria-label="Not Supported">
-      <div><img src="images/3drepo-logo-white.png"></div>
+      <div><img id="notSupportedLogo" src="images/3drepo-logo-white.png"></div>
       <div>
 
         Your browser is not supported.
         Please upgrade to the latest version of 
-        <a href="https://www.google.co.uk/chrome" rel="noopener" target="_blank">Chrome</a>, 
-        <a href="https://www.mozilla.org/firefox" rel="noopener" target="_blank">FireFox</a> or 
-        <a href="https://www.microsoft.com/en-gb/windows/microsoft-edge" rel="noopener"target="_blank">Edge</a>
+        <a id="notSupportedChrome" href="https://www.google.co.uk/chrome" rel="noopener" target="_blank">Chrome</a>, 
+        <a id="notSupportedFirefox" href="https://www.mozilla.org/firefox" rel="noopener" target="_blank">FireFox</a> or 
+        <a id="notSupportedEdge" href="https://www.microsoft.com/en-gb/windows/microsoft-edge" rel="noopener"target="_blank">Edge</a>
         <br><br><br>
 
         <input id="notSupportedButton" type="button" value="OK" style="padding:10px 60px; font-size:14px;" onclick="document.getElementById(&quot;notSupported&quot;).style.visibility=&quot;hidden&quot;">
@@ -101,9 +101,8 @@
         } 
 
         if (ie === true) {
-          console.log("INTERNET EXPLORER")
           document.getElementById('notSupported').style.visibility='visible';
-          document.getElementById('notSupportedButton').style.display = 'none';
+          document.getElementById('notSupportedButton').style.display = 'visible';
         }
 
       } 
@@ -118,7 +117,7 @@
     <!-- CSS AND JAVASCRIPT -->
 
     <!-- Load config from server and dependencies + 3D Repo JavaScript-->
-    <script type="text/javascript" src="/api/config/config.js"></script>
+    <script type="text/javascript" src="/config/config.js"></script>
     <script type="text/javascript" src="/dist/three_d_repo.min.js" async></script>
    
     <script type="text/javascript", src="https://www.google.com/recaptcha/api.js?render=explicit&onload=vcRecaptchaApiLoaded" async></script>
