--- a/frontend/unity/index.html
+++ b/frontend/unity/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | AssetBundleViewer</title>
+    <title>Unity WebGL Player | 3D Repo Unity</title>
     <link rel="stylesheet" href="TemplateData/style.css">
     <link rel="shortcut icon" href="TemplateData/favicon.ico" />
     <script src="TemplateData/UnityProgress.js"></script>
@@ -14,7 +14,7 @@
       <br>
       <div class="logo"></div>
       <div class="fullscreen"><img src="TemplateData/fullscreen.png" width="38" height="38" alt="Fullscreen" title="Fullscreen" onclick="SetFullscreen(1);" /></div>
-      <div class="title">AssetBundleViewer</div>
+      <div class="title">3D Repo Unity</div>
     </div>
     <script type='text/javascript'>
   var Module = {
