ISSUE #703 - Move maintenance to the frontend service

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -80,6 +80,29 @@
       </div>
     </div>
 
+    <div id="maintenanceMode" style='display: none; background-color:rgb(12,47,84); color: white; overflow-y: hidden;'>
+      <div style='width:100%; height:100%; margin:0px; text-align: center;'>
+        <img style="margin: 10vh;" src="images/3drepo-logo-white.png">
+        <table style="margin: 0 auto;  margin-top: 5vh; text-align: center;">
+          <tr>
+            <td style='padding:60px'>
+              <img src="images/maintenance.svg" alt="Hammer and Wrench">
+            </td>
+              
+            <td style='padding: 30px; width: 50vw; font-family: Roboto; font-size: 40px;'>
+              <h4 style="font-weight: lighter;">
+                Apologies, but the site is currently down for maintenance. We'll be back up as soon as possible.
+              </h4>
+            </td> 
+
+            <td style='padding:60px'>
+              <img src="images/maintenance.svg" alt="Hammer and Wrench">
+            </td>
+          </tr>
+          </table>
+      </div>
+    </div>
+
     <!-- Handle Internet Explorer -->
     <script type="text/javascript" async>
 
@@ -135,6 +158,7 @@
             script.setAttribute("async", true);
             document.head.appendChild(script);
         }
+
       }
     </script>
   </body>
